# ctrlfreak

./: .gitignore  README.md
agents/ac-infinity/: .env.example  package-lock.json  package.json
agents/ac-infinity/src/: ac-client.js  config.js  index.js  ws-client.js
agents/cli/: sensor-send
agents/pis88/: .gitignore  Cargo.toml  Cross.toml  build-all.sh
agents/pis88/src/: main.rs
agents/tapo/: .gitignore  Cargo.toml  build-all.sh  config.toml.example
agents/tapo/src/: main.rs
agents/tapo/tapo-fork/tapo-py/tapo-py/tapo/responses/child_device_list_power_strip_result/: power_strip_plug_result.pyi
agents/tapo/tapo-fork/tapo-py/tapo-py/tapo/responses/device_info_result/: generic_result.pyi
agents/tapo/tapo-fork/tapo/src/: requests.rs  responses.rs
agents/tapo/tapo-fork/tapo/src/api/: api_client.rs  plug_energy_monitoring_handler.rs  plug_handler.rs
agents/tapo/tapo-fork/tapo/src/api/child_devices/: power_strip_plug_handler.rs
agents/tapo/tapo-fork/tapo/src/requests/: add_countdown_rule.rs  get_rules.rs  tapo_request.rs
agents/tapo/tapo-fork/tapo/src/responses/: schedule_rules_result.rs
agents/tapo/tapo-fork/tapo/src/responses/child_device_list_power_strip_result/: power_strip_plug_result.rs
agents/wss-client-example/: example.js  lib.js  package.json
uiserver/: .env.example  debug_db.js  package-lock.json  package.json  webpack.config.js
uiserver/api/: auth.js  changelog.js  devices.js  index.js  output-config.js  outputs.js  readings.js  rules.js  views.js
uiserver/public/: index.html
uiserver/scripts/: manage-keys.js  manage-users.js  migrate.js
uiserver/src/: App.js  theme.js
(+10 files in other folders)
