[package]
name = "tapo-agent"
version = "1.0.0"
edition = "2021"
description = "Tapo smart plug sensor data collection agent"

[dependencies]
tapo = { path = "./tapo-fork/tapo" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-native-roots"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
log = "0.4"
env_logger = "0.11"
clap = { version = "4", features = ["derive", "env"] }
# Add reqwest with rustls to override tapo's default
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
